--- a/src/app/components/page/styles/tab-content.scss
+++ b/src/app/components/page/styles/tab-content.scss
@@ -5,5 +5,6 @@
 
   &.landing-page {
     padding-top: 0;
+    padding-bottom: 0;
   }
 }
