--- a/src/app/components/page/styles/templates/card.scss
+++ b/src/app/components/page/styles/templates/card.scss
@@ -1,20 +1,26 @@
 // Cards
-.card-image {
-  overflow: hidden;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  background-size: cover;
-  &.xlarge{
-    height: 632px;
+.card-wrapper{
+  cursor: pointer;
+
+  .card-image {
+    overflow: hidden;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    &.xlarge{
+      height: 180px;
+    }
+    &.medium {
+      height: 248px;
+    }
+    &.small{
+      height: 280px;
+    }
   }
-  &.large {
-    height: 456px;
-  }
-  &.small{
-    height: 232px;
-  }
-}
-.cards {
+  .card {
+    border: 0;
     background-color: var(--sdds-white);
     padding: 4rem;
     padding-bottom: 16rem;
@@ -22,13 +28,7 @@
     border-radius: 4px;
     margin-bottom: 8rem;
     position: relative;
-    cursor: pointer;
-    &:hover {
-      box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.15);
-    }
-    &:active {
-      box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
-    }
+    
     p{
       margin: 0;
       position: relative;
@@ -59,3 +59,28 @@
       }
     }
   }
+  &:hover {
+    .card {
+      box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.15);
+    }
+  }
+  &:active {
+    .card{
+      box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
+    }
+  }
+
+  @media(min-width:1056px){
+    .card-image{
+      &.xlarge{
+        height: 632px;
+      }
+      &.medium {
+        height: 456px;
+      }
+      &.small{
+        height: 232px;
+      }
+    }
+  }
+}
